<resources>
    <string name="app_name">Funiplication!</string>
    <string name="select_user">Select User Name:</string>
    <string name="create_user">Create New User:</string>
    <string name="start_sesh">Start The Fun!</string>
    <string name="userName">User Name:</string>
    <string name="add_u_name">Create a New User!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="zero">0</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
</resources>
