<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg01"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".StartSessionActivity">


    <TextView
        android:id="@+id/ass_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bg01"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ass_gold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@color/bg01"
            android:gravity="center"
            android:padding="16dp"
            android:textSize="30dp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="0dp"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bg01"
        android:gravity="center"
        android:padding="16dp"
        android:text="Hit A Number Below To Practice!"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="one"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="two"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="three"
            android:text="@string/three" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="four"
            android:text="@string/four" />

        <Button
            android:id="@+id/button5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="five"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="six"
            android:text="@string/six" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="seven"
            android:text="@string/seven" />

        <Button
            android:id="@+id/button8"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="eight"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button9"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="nine"
            android:text="@string/nine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button10"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="ten"
            android:text="@string/ten" />

        <Button
            android:id="@+id/button11"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="eleven"
            android:text="@string/eleven" />

        <Button
            android:id="@+id/button12"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="twelve"
            android:text="@string/twelve" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/change_user"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:tag="change_user"
            android:text="Change User" />
    </LinearLayout>

</LinearLayout>