<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg01"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".TestActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bg01"
        android:gravity="center"
        android:padding="10dp"
        android:text="What is:"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/your_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bg01"
        android:gravity="center"
        android:padding="10dp"
        android:text="Your Answer:"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="1"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="2"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="3"
            android:text="@string/three" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button4"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="4"
            android:text="@string/four" />

        <Button
            android:id="@+id/button5"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="5"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="6"
            android:text="@string/six" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button7"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="7"
            android:text="@string/seven" />

        <Button
            android:id="@+id/button8"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="8"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button9"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="9"
            android:text="@string/nine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="clear"
            android:text="clear" />

        <Button
            android:id="@+id/button0"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="0"
            android:text="@string/zero" />

        <Button
            android:id="@+id/buttonAnswer"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:tag="answer"
            android:text="go!" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center">


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/quit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:tag="quit"
            android:text="return to main menu" />


    </LinearLayout>
</LinearLayout>